[gd_scene load_steps=8 format=3 uid="uid://csxyc2x5u7qx1"]

[ext_resource type="Texture2D" uid="uid://cp8msxj7gadxy" path="res://Sprites/pixelated-flower-sunset-stockcake.jpg" id="1_3m4lb"]
[ext_resource type="Texture2D" uid="uid://boqs1shhg6fs4" path="res://Sprites/Sprite sheet for Basic Pack.png" id="2_egy2t"]
[ext_resource type="Script" path="res://Scripts/MainMenuManager.gd" id="3_p48v5"]
[ext_resource type="FontFile" uid="uid://m624rb6m0xb7" path="res://Sprites/ToyBox.ttf" id="4_ierih"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f0lxc"]
texture = ExtResource("1_3m4lb")
modulate_color = Color(0.439216, 0.439216, 0.439216, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d8boj"]
texture = ExtResource("2_egy2t")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(276, 178, 89, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ydugk"]
texture = ExtResource("2_egy2t")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(275, 212, 90, 25)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_f0lxc")

[node name="UiBorder" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="HBoxContainer" parent="UiBorder"]
layout_mode = 2
size_flags_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="UiBorder/Top"]
custom_minimum_size = Vector2(1151, 10)
layout_mode = 2
texture = ExtResource("2_egy2t")
region_rect = Rect2(200, 57, 31, 7)
patch_margin_left = 10
patch_margin_right = 10

[node name="Bottom" type="HBoxContainer" parent="UiBorder"]
layout_mode = 2
size_flags_vertical = 8

[node name="NinePatchRect" type="NinePatchRect" parent="UiBorder/Bottom"]
custom_minimum_size = Vector2(1151, 10)
layout_mode = 2
texture = ExtResource("2_egy2t")
region_rect = Rect2(201, 80, 30, 7)
patch_margin_left = 10
patch_margin_right = 10

[node name="left" type="VBoxContainer" parent="UiBorder"]
layout_mode = 2
size_flags_horizontal = 0

[node name="NinePatchRect" type="NinePatchRect" parent="UiBorder/left"]
custom_minimum_size = Vector2(10, 648)
layout_mode = 2
texture = ExtResource("2_egy2t")
region_rect = Rect2(203, 57, 5, 30)
patch_margin_top = 10
patch_margin_bottom = 10

[node name="right" type="VBoxContainer" parent="UiBorder"]
layout_mode = 2
size_flags_horizontal = 8

[node name="NinePatchRect" type="NinePatchRect" parent="UiBorder/right"]
custom_minimum_size = Vector2(10, 654)
layout_mode = 2
texture = ExtResource("2_egy2t")
region_rect = Rect2(224, 57, 5, 30)
patch_margin_top = 10
patch_margin_bottom = 10

[node name="MainMenu" type="MarginContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_p48v5")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 100

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("2_egy2t")
region_rect = Rect2(293, 5, 38, 38)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/VBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 15

[node name="NewGame" type="Button" parent="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_d8boj")
theme_override_styles/hover = SubResource("StyleBoxTexture_ydugk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ydugk")

[node name="PlayLabel" type="Label" parent="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer/NewGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -17.5
offset_right = 32.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.564706, 0.384314, 0.364706, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_ierih")
theme_override_font_sizes/font_size = 30
text = "New Game
"

[node name="LoadGame" type="Button" parent="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_d8boj")
theme_override_styles/hover = SubResource("StyleBoxTexture_ydugk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ydugk")

[node name="PlayLabel" type="Label" parent="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer/LoadGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -17.5
offset_right = 32.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.564706, 0.384314, 0.364706, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_ierih")
theme_override_font_sizes/font_size = 30
text = "Load Game
"

[node name="QuitGame" type="Button" parent="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_d8boj")
theme_override_styles/hover = SubResource("StyleBoxTexture_ydugk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ydugk")

[node name="PlayLabel" type="Label" parent="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer/QuitGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -17.5
offset_right = 32.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.952941, 0.898039, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.564706, 0.384314, 0.364706, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_ierih")
theme_override_font_sizes/font_size = 30
text = "Quit Game
"

[node name="Sep" type="Control" parent="MainMenu/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer/NewGame" to="MainMenu" method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer/LoadGame" to="MainMenu" method="_on_load_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer/QuitGame" to="MainMenu" method="_on_quit_game_pressed"]
